# clicks-mini

./: .gitignore  pyproject.toml
config/: config.yaml
config/datasets/: musqhd.yaml
config/models/: unet-simple.yaml
mini/: __main__.py  dataset.py  diffusion_inpaint.py  model_wrapper.py  parametrisations.py  unet.py
tests/: conftest.py  test_diffusion.py  test_dummy.py  test_parametrisations.py
