[tool.poetry]
name = "clicks-mini"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "mini" },
]


[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
audio-diffusion-pytorch = "^0.1.3"
lightning = "^2.2.4"
einops = "^0.8.0"
pydantic = "^2.7.1"
soundfile = "^0.12.1"
jsonargparse = {version = "^4.28.0", extras = ["signatures"]}
tensorboard = "^2.16.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
torchinfo = "^1.8.0"
pytest = "^8.2.1"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
